// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Atom tests should render Button correctly 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover:not(:active,:disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button
  </button>
</DocumentFragment>
`;

exports[`Button Atom tests should render Button disabled 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover:not(:active,:disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
    class="c0"
    disabled=""
  >
    fullWidth
  </button>
</DocumentFragment>
`;

exports[`Button Atom tests should render Button link 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover:not(:active,:disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<a
    class="c0"
  >
    button link
  </a>
</DocumentFragment>
`;

exports[`Button Atom tests should render Button with icon 1`] = `
<DocumentFragment>
  .c1 {
  height: 1.5rem;
  width: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.5rem;
}

.c2 {
  color: #000000;
  font-size: 1.5rem;
}

.c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover:not(:active,:disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
    class="c0"
  >
    <div
      class="c1"
      data-testid="icon-container"
      size="24"
    >
      <span
        class="c2 material-symbols-sharp"
        data-testid="icon"
        size="24"
      >
        help
      </span>
    </div>
    button icon
  </button>
</DocumentFragment>
`;

exports[`Button Atom tests should render Button with onClick 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover:not(:active,:disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button link
  </button>
</DocumentFragment>
`;

exports[`Button Atom tests should render Button with spinner 1`] = `
<DocumentFragment>
  .c1 {
  margin-left: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 50%;
  border-top: 0.1875rem solid #1E54B7;
  border-right: 0.1875rem solid #1E54B7;
  border-bottom: 0.1875rem solid #1E54B7;
  border-left: 0.1875rem solid #FFFFFF;
  -webkit-animation: cilQsd 1.1s infinite linear;
  animation: cilQsd 1.1s infinite linear;
}

.c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover:not(:active,:disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
    class="c0"
  >
    fullWidth
    <div
      class="c1"
      color="#FFFFFF"
    />
  </button>
</DocumentFragment>
`;

exports[`Button Atom tests should render Button with styled system utilities 1`] = `
<DocumentFragment>
  .c0 {
  height: 2.25rem;
  padding: 0 0.75rem;
  font-size: 0.875rem;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  cursor: pointer;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.1s ease-in-out, border-color 0.1s ease-in-out;
  background-color: #276EF1;
  color: #FFFFFF;
  width: normal;
  height: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 100px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover:not(:active,:disabled) {
  background-color: #0e55d7;
}

.c0 .material-symbols-sharp {
  color: inherit;
}

.c0:disabled {
  cursor: not-allowed;
}

<button
    class="c0"
  >
    button link
  </button>
</DocumentFragment>
`;
